[package]
name = "rhttp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
chrono = "0.4.39"
flutter_rust_bridge = { version = "=2.9.0", features = ["chrono"] }
futures-util = "0.3.31"
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = "0.7.12"

[dependencies.reqwest]
version = "0.12.12"
default-features = false
features = [
    # Enable since rustls is disabled.
    "default-tls",

    "charset",
    "http2",

    # Disable "http3" and "rustls-tls-webpki-roots" feature, otherwise encounter a `Unexpected EOF` on server website.
    # It's weired that only happen on specific website, seems compatibility with old websites is not good enough.
    # Though it's expected to only use Http1.1, safe.
    #"http3",
    #"rustls-tls-webpki-roots",

    "stream",
    "multipart",
    "socks",

    # Compression
    "brotli",
    "gzip",
]

[profile.release]
opt-level = 3
strip = true
panic = "abort"
lto = true
codegen-units = 1

[profile.dev]
opt-level = 3
panic = "abort"
